# ROS2-Autonomous-Hotel-Robot-Simulation

./: README.md
ExampleNav2/src/op_panel/: CMakeLists.txt  package.xml  plugin_description.xml
ExampleNav2/src/op_panel/include/op_panel/: op_panel.h
ExampleNav2/src/op_panel/src/: op_panel.cpp
ExampleNav2/src/simple_nav2/: package.xml  setup.cfg  setup.py
ExampleNav2/src/simple_nav2/config/: mapper_params_online_async.yaml  mapper_params_online_async_with_map.yaml  simple_nav2 - Copy.rviz  simple_nav2.rviz  simple_nav2_no_op_panel.rviz
ExampleNav2/src/simple_nav2/launch/: drive.launch.py  gazebo.launch.py  launch.py  map.launch.py  nav2.launch.py  op_panel.launch.py
ExampleNav2/src/simple_nav2/map/: map.pgm  map.yaml  map_2.pgm  map_2.yaml
ExampleNav2/src/simple_nav2/param/: simple_nav2_params.yaml
ExampleNav2/src/simple_nav2/simple_nav2/: sim_nav_goals.py
ExampleNav2/src/simple_robot_description/: CMakeLists.txt  package.xml
ExampleNav2/src/simple_robot_description/config/: display.rviz
ExampleNav2/src/simple_robot_description/launch/: display.launch.py
ExampleNav2/src/simple_robot_description/sdf/: simple_robot_gazebo.sdf
ExampleNav2/src/simple_robot_description/urdf/: simple_robot.urdf.xacro  simple_robot_gazebo.urdf  simple_robot_gazebo.urdf.xacro
NodeExamples/: Dockerfile
NodeExamples/practical_ws/src/hello_world/: package.xml  setup.cfg  setup.py
NodeExamples/practical_ws/src/hello_world/hello_world/: hello.py
NodeExamples/practical_ws/src/hello_world/launch/: launch.py
NodeExamples/practical_ws/src/hello_world_oo/: package.xml  setup.cfg  setup.py
NodeExamples/practical_ws/src/hello_world_oo/hello_world_oo/: hello.py
NodeExamples/practical_ws/src/hello_world_oo/launch/: launch.py
NodeExamples/practical_ws/src/rsa_interfaces/: CMakeLists.txt  package.xml
NodeExamples/practical_ws/src/rsa_interfaces/srv/: Id.srv
NodeExamples/practical_ws/src/simple_service_client/: package.xml  setup.cfg  setup.py
NodeExamples/practical_ws/src/simple_service_client/simple_service_client/: client.py
NodeExamples/practical_ws/src/simple_service_server/: package.xml  setup.cfg  setup.py
NodeExamples/practical_ws/src/simple_service_server/launch/: launch.py
NodeExamples/practical_ws/src/simple_service_server/simple_service_server/: server.py
NodeExamples/practical_ws/src/simple_topic_publisher/: package.xml  setup.cfg  setup.py
NodeExamples/practical_ws/src/simple_topic_publisher/launch/: launch.py
NodeExamples/practical_ws/src/simple_topic_publisher/simple_topic_publisher/: publisher.py
NodeExamples/practical_ws/src/simple_topic_subscriber/: package.xml  setup.cfg  setup.py
NodeExamples/practical_ws/src/simple_topic_subscriber/simple_topic_subscriber/: subscriber.py
Project_Docs/Design_Docs/: Requirements.xlsx
Project_Docs/Design_Docs/SysML/: Requirements_Breakdown_SysML-4.drawio  Semantic_SysML_Structure.drawio  Stm1_ General.drawio  Stm2_ Moving to room.drawio  Stm3_ Take lift.drawio
Project_Docs/Design_Docs/SysML/Updated_Activity_Diagrams/: Act2_Mooving_To_Room.drawio  Act3_Taking_Lift.drawio  Act_Main_loop.drawio  Semantic_SysML_Structure.drawio  System_Context.drawio
Project_Docs/Project-Management/: GANTT Chart.mpp  Work_Breakdown_Structure.drawio
my_world/src/my_world_launch/: package.xml  setup.cfg  setup.py
my_world/src/my_world_launch/launch/: launch_world.py
my_world/src/my_world_launch/worlds/: hotel_model.sdf
